...
const NativeView: React.ComponentType<NativeExpoBBPlayerViewProps> =
  requireNativeView("ExpoBBPlayer");

const ExpoBBPlayerView = (props: ExpoBBPlayerViewProps) => {
  return (
    <NativeView
      testID="PlayerView"
      {...props}
      onDidTriggerCustomStatistics={(event) =>
        props.onDidTriggerCustomStatistics?.(event.nativeEvent)
      }
      onDidTriggerProjectLoaded={(event) =>
        props.onDidTriggerProjectLoaded?.(event.nativeEvent)
...
